--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'eclipse'
 apply plugin: 'java'
-
+/*
 sourceSets {
     main {
          java {
@@ -24,6 +24,7 @@ sourceSets {
               }
          }
 }
+*/
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -37,9 +38,9 @@ dependencies {
 	compile 'log4j:log4j:1.2.7'
 	compile group: 'com.google.code.gson', name: 'gson', version:'2.7'
 	compile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
-	compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4+'
-	compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.4+'
-	compile group: 'org.eclipse.jetty', name: 'jetty-xml', version: '9.4+'
+	// compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4+'
+	// compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.4+'
+	// compile group: 'org.eclipse.jetty', name: 'jetty-xml', version: '9.4+'
 	
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
