--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,19 @@
  * user guide available at https://docs.gradle.org/3.5/userguide/tutorial_java_projects.html
  */
 
+// Applying the maven-publish plugin is required when using Maven Publications.
+plugins {
+    id "com.jfrog.bintray" version "1.8.4"
+    id "maven-publish"
+    id 'java-library'
+}
+
 
 // Apply the java plugin to add support for Java
 apply plugin: 'eclipse'
 apply plugin: 'java'
-apply plugin: 'war'
+//apply plugin: 'war'
+
 
 
 // In this section you declare where to find the dependencies of your project
@@ -24,11 +32,79 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version:'2.7'
 	compile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
 }
-
+/*
 war
 {
 	from('src/main/java/org/smaptest/server/web/html') { into 'html' }
 	from('src/main/java/org/smaptest/server') { include 'log4j.properties' into('WEB-INF/classes') }
 	from('src/main/java/org/smaptest/server') { include 'context-template.xml' rename { 'META-INF/content.xml' } }
 	webXml = file('src/main/java/org/smaptest/server/web/WEB-INF/web.xml') // copies a file to WEB-INF/web.xml
+}
+*/
+apply from: 'publish.gradle'
+
+
+
+
+
+
+
+
+
+
+
+
+///////////////////////////////////////////////////
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'smap'
+
+    publishedGroupId = 'org.smap'
+    libraryName = 'smap'
+    artifact = 'smap'
+
+    libraryDescription = 'a simple light weight server to simplify service mappings'
+
+    siteUrl = 'https://github.com/markmckellar/smap'
+    gitUrl = 'https://github.com/markmckellar/smapgit'
+
+    libraryVersion = '0.1.0'
+
+    developerId = 'mdm'
+    developerName = 'Mark McKellar'
+    developerEmail = 'mckellar.mm@gmail.com'
+
+    licenseName = 'MIT'
+    licenseUrl = 'https://opensource.org/licenses/MIT'
+    allLicenses = ["MIT"]
+}
+
+
+
+///////////////////////////////////////////////
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+
+
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+
+    configurations = ['archives']
+    pkg {
+        repo = bintrayRepo
+        name = bintrayName
+        desc = libraryDescription
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = allLicenses
+        dryRun = false
+        publish = true
+        override = false
+        publicDownloadNumbers = true
+        version {
+            desc = libraryDescription
+        }
+    }
 }
