Changed build and publishing an ew version

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ plugins {
     id 'java-library'
 }
 
+// added to sove building issues on diff platforms
+compileJava {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+}
+
 
 // Apply the java plugin to add support for Java
 apply plugin: 'eclipse'
