--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ ext {
     siteUrl = 'https://github.com/markmckellar/smap'
     gitUrl = 'https://github.com/markmckellar/smapgit'
 
-    libraryVersion = '0.1.0'
+    libraryVersion = '20200302.01'
 
     developerId = 'mdm'
     developerName = 'Mark McKellar'
